added VoteService and response support
